--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.12.2",
     "stylus-loader": "^1.1.1",
+    "superagent": "^1.2.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.9.7",
     "webpack-dev-server": "^1.9.0",
