--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^0.8.3",
     "hjs-webpack": "^2.2.2",
     "json-loader": "^0.5.1",
+    "lodash": "^3.9.3",
     "node-libs-browser": "^0.5.0",
     "postcss-loader": "^0.4.3",
     "react": "^0.13.3",
