--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-loader": "^0.4.3",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
+    "react-router": "^0.13.3",
     "style-loader": "^0.12.2",
     "stylus-loader": "^1.1.1",
     "superagent": "^1.2.0",
