--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/unbracketed/heroku-log-viewer#readme",
   "dependencies": {
-    "alt": "^0.16.5",
+    "alt": "^0.16.6",
     "autoprefixer-core": "^5.1.11",
+    "axios": "^0.5.4",
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
@@ -37,7 +38,6 @@
     "react-router": "^0.13.3",
     "style-loader": "^0.12.2",
     "stylus-loader": "^1.1.1",
-    "superagent": "^1.2.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.9.7",
     "webpack-dev-server": "^1.9.0",
