--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-loader": "^5.1.3",
     "css-loader": "^0.13.1",
     "file-loader": "^0.8.3",
-    "hjs-webpack": "^2.2.2",
+    "hjs-webpack": "git://github.com/unbracketed/hjs-webpack.git#master",
     "json-loader": "^0.5.1",
     "lodash": "^3.9.3",
     "node-libs-browser": "^0.5.0",
