--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
   },
   "homepage": "https://github.com/unbracketed/heroku-log-viewer#readme",
   "dependencies": {
-    "alt": "^0.16.6",
-    "autoprefixer-core": "^5.1.11",
+    "alt": "^0.16.10",
+    "autoprefixer-core": "^5.2.0",
     "axios": "^0.5.4",
-    "babel": "^5.4.7",
-    "babel-core": "^5.4.7",
-    "babel-loader": "^5.1.3",
+    "babel": "^5.5.6",
+    "babel-core": "^5.5.6",
+    "babel-loader": "^5.1.4",
     "css-loader": "^0.13.1",
     "file-loader": "^0.8.3",
-    "hjs-webpack": "git://github.com/unbracketed/hjs-webpack.git#master",
-    "json-loader": "^0.5.1",
+    "hjs-webpack": "^2.5.0",
+    "json-loader": "^0.5.2",
     "lodash": "^3.9.3",
-    "node-libs-browser": "^0.5.0",
-    "postcss-loader": "^0.4.3",
+    "node-libs-browser": "^0.5.2",
+    "postcss-loader": "^0.4.4",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
     "react-router": "^0.13.3",
-    "style-loader": "^0.12.2",
-    "stylus-loader": "^1.1.1",
+    "style-loader": "^0.12.3",
+    "stylus-loader": "^1.2.0",
     "url-loader": "^0.5.5",
-    "webpack": "^1.9.7",
+    "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0",
     "yeticss": "^6.0.7"
   }
