--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   },
   "homepage": "https://github.com/unbracketed/heroku-log-viewer#readme",
   "dependencies": {
-    "alt": "^0.16.10",
     "autoprefixer-core": "^5.2.1",
-    "axios": "^0.5.4",
-    "babel": "^5.6.5",
-    "babel-core": "^5.6.5",
-    "babel-loader": "^5.1.4",
-    "css-loader": "^0.13.1",
+    "babel": "^5.6.14",
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.2.2",
+    "css-loader": "^0.15.1",
     "file-loader": "^0.8.3",
-    "hjs-webpack": "^2.6.1",
+    "hjs-webpack": "^2.8.1",
     "json-loader": "^0.5.2",
-    "lodash": "^3.9.3",
+    "lodash": "^3.10.0",
     "node-libs-browser": "^0.5.2",
-    "postcss-loader": "^0.4.4",
+    "postcss-loader": "^0.5.1",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-beta3",
+    "redux": "^1.0.0-alpha",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
     "url-loader": "^0.5.5",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0",
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1",
+    "whatwg-fetch": "^0.9.0",
     "yeticss": "^6.0.7"
   }
 }
