--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel": "^5.6.14",
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
+    "babel-runtime": "^5.6.15",
     "css-loader": "^0.15.1",
     "file-loader": "^0.8.3",
     "hjs-webpack": "^2.8.1",
