--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
   "homepage": "https://github.com/unbracketed/heroku-log-viewer#readme",
   "dependencies": {
     "autoprefixer-core": "^5.2.1",
-    "babel": "^5.6.14",
-    "babel-core": "^5.6.15",
-    "babel-loader": "^5.2.2",
-    "babel-runtime": "^5.6.15",
-    "css-loader": "^0.15.1",
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.20",
+    "css-loader": "^0.15.6",
     "file-loader": "^0.8.3",
-    "hjs-webpack": "^2.8.1",
+    "hjs-webpack": "^2.12.2",
     "json-loader": "^0.5.2",
-    "lodash": "^3.10.0",
+    "lodash": "^3.10.1",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^0.5.1",
     "react": "^0.13.3",
-    "react-hot-loader": "^1.2.7",
+    "react-hot-loader": "^1.2.8",
     "react-router": "^1.0.0-beta3",
-    "redux": "^1.0.0-alpha",
+    "redux": "^1.0.0-rc",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
     "url-loader": "^0.5.5",
-    "webpack": "^1.10.0",
+    "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
     "whatwg-fetch": "^0.9.0",
-    "yeticss": "^6.0.7"
+    "yeticss": "^7.0.3"
   }
 }
