--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "postcss-loader": "^0.5.1",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
+    "react-redux": "^0.8.0",
     "react-router": "^1.0.0-beta3",
     "redux": "^1.0.0-rc",
+    "redux-thunk": "^0.1.0",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
     "url-loader": "^0.5.5",
@@ -43,5 +45,12 @@
     "webpack-dev-server": "^1.10.1",
     "whatwg-fetch": "^0.9.0",
     "yeticss": "^7.0.3"
+  },
+  "babel": {
+    "stage": 0,
+    "optional": "runtime"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
